--- a/app/views/adip/report.html.haml
+++ b/app/views/adip/report.html.haml
@@ -1,3 +1,6 @@
+:css
+  #jsMath_button { display: none !important; }
+
 .header
   %span.category Temat:
   %span.description Pobrać losowo ceny metra kwadratowego trzydziestu mieszkań wystawionych w Krakowie na sprzedaż w dowolnym serwisie internetowym. Wybrane mieszkania muszą znajdować się w możliwie różnych lokalizacjach. Podać źródło informacji. Na poziomie istotności 0,05 zweryfikować hipotezę, że średnia cena metra kwadratowego w Krakowie wynosi 7600 zł.
@@ -5,6 +8,10 @@
 .solution
   %span.category Rozwiązanie:
   %p.description Wybraliśmy model II weryfikacji hipotez dotyczących wartości średniej, zakładając tym samym, że cena za metr kwadratowy ma rozkład normalny o nieznanych parametrach.
+  %p.description
+    .math{ :style => 'text-align: left' } X \sim N(\mu, \sigma)
+    .math{ :style => 'text-align: left' } H: \mu = \mu_o
+    .math{ :style => 'text-align: left' } K: \mu \not= \mu_o
   %p.description Dane pochodzą z serwisu: www.krakow.gumtree.pl i dotyczą mieszkań deweloperskich.
 
   %table.data
@@ -27,33 +34,40 @@
           %td= number apartment.surface
           %td= number apartment.cost_per_meter_square
 
-  %table
-    %thead
-      %tr
-        %th
-          Wartość oczekiwana
-        %th
-          Liczność próby
-        %th
-          Wartość średnia
-        %th
-          Odchylenie standardowe
-        %th
-          Wartość znormalizowana
-        %th
-          Poziom ufności
-        %th.set
-          Przedział krytyczny
-
-    %tbody
-      %tr
-        %td= number @statistics.predicted
-        %td= @statistics.n
-        %td= number @statistics.average
-        %td= number @statistics.deviation
-        %td= number @statistics.normalized
-        %td= @statistics.trust
-        %td.set= HTMLEntities.new.decode(@statistics.critical_set_for_equal_hypothesis)
+  .sidebar
+    %table.no-border.no-zebra
+      %tbody
+        %tr
+          %td{ :style => "padding: 10px" }
+            .math= "\\mu_o = #{@statistics.predicted},"
+          %td{ :style => "padding: 10px" }
+            .math= "n = #{@statistics.n},"
+          %td{ :style => "padding: 10px" }
+            .math= "\\alpha = #{@statistics.trust}"
+        %tr
+          %td{ :colspan => 3 }
+            .math{ :style => 'text-align: left' } \overline{x} = {1\over\displaystyle n} \sum_{i=1}^n x_i
+        %tr
+          %td{ :colspan => 3 }
+            .math{ :style => 'text-align: left' }= "\\overline{x} = #{number @statistics.average}"
+        %tr
+          %td{ :colspan => 3 }
+            .math{ :style => 'text-align: left' } s = \sqrt{ {1\over\displaystyle n}{\sum_{i=1}^n (\overline{x} - x_i)^2} }
+        %tr
+          %td{ :colspan => 3 }
+            .math{ :style => 'text-align: left' }= "s = #{number @statistics.deviation}"
+        %tr
+          %td{ :colspan => 3 }
+            .math{ :style => 'text-align: left' } T = {\overline{x}-\mu_o\over\displaystyle s}\sqrt{n}
+        %tr
+          %td{ :colspan => 3 }
+            .math{ :style => 'text-align: left' }= "T = #{number @statistics.normalized}"
+        %tr
+          %td{ :colspan => 3 }
+            .math{ :style => 'text-align: left' } W = (-\infty, -t(1 - {\alpha\over\displaystyle 2}, n-1)] \cup [t(1 - {\alpha\over\displaystyle 2}, n-1), +\infty)
+        %tr
+          %td{ :colspan => 3 }
+            .math{ :style => 'text-align: left' }= "W = #{@statistics.critical_set_for_equal_hypothesis :use_js_math => true}"
 
 .result
   %span.category Wnioski:
@@ -62,8 +76,10 @@
     Nieznana wartość rozkładu Studenta.
   - else
     - if @statistics.equal_hypothesis_is_good?
+      .math{ :style => "text-align: left" } T \in W
       Wartość znormalizowana należy do przedziału krytycznego. Hipotezę należy odrzucić.
     - else
+      .math{ :style => "text-align: left" } T \notin W
       Wartość znormalizowana nie należy do przedziału krytycznego. Brak podstaw do odrzucenia hipotezy.
 
 .authors
