--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     %title DijkstraMap
     = stylesheet_link_tag :all
     = javascript_include_tag :all
+    = javascript_include_tag '/javascripts/jsMath/easy/load.js'
     = csrf_meta_tag
 
   %body
