--- a/public/stylesheets/sass/adip.sass
+++ b/public/stylesheets/sass/adip.sass
@@ -24,10 +24,14 @@ sub, sup
 
 .solution
   margin: 10px 0
+  overflow: hidden
 
 .category
   font-size: 14px
   font-weight: bold
+
+.result
+  margin-top: 10px
 
 table
   margin-top: 10px
@@ -37,20 +41,58 @@ table
   thead
     border-bottom: 1px solid #ccc
 
+  tbody
+    border-bottom: 1px solid #ccc
+
   tr
     &:nth-child(even)
       background-color: #f8f8f8
 
   td, th
     padding: 3px
-    text-align: right
+    text-align: center
+    border-right: 1px solid #ccc
 
     &.set
       width: 150px
 
   &.data
+    float: left
+
     td, th
-      padding: 3px 8px
+      padding: 3px
+      border: 0
+      text-align: right
+
+  &.short, &.no-zebra
+    tr
+      &:nth-child(even)
+        background-color: inherit
+
+      td
+        border-bottom: 1px solid #ccc
+
+  &.no-border
+    border: 0
+
+    tbody, thead
+      border: 0
+
+      tr
+        border: 0
+
+        th, td
+          border: 0
+
+.sidebar
+  display: inline-block
+  padding: 10px 0 10px 30px
+
+.clear
+  height: 0
+  margin: 0
+  padding: 0
+  clear: both
 
 .authors
   margin-top: 30px
